[package]
name = "async-peek"
description = "Read data asynchronously without removing it from the queue"
version = "0.2.1"
homepage = "https://github.com/r3v2d0g/async-peek"
repository = "https://github.com/r3v2d0g/async-peek"
documentation = "https://docs.rs/async-peek"
keywords = ["async", "io", "peek", "tcp", "udp"]
categories = ["asynchronous", "network-programming"]
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
ufut = "0.2"

[dependencies.async-io]
version = "0.2"
optional = true
default-features = false

[dependencies.async-net]
version = "1.0"
optional = true
default-features = false

[dev-dependencies]
smol = "0.4"
